--- a/bmm/roles/create-user/tasks/main.yml
+++ b/bmm/roles/create-user/tasks/main.yml
@@ -21,13 +21,13 @@
     command: echo "{{password.user_input | password_hash('sha512')}}"
     register: upassword
 
-  - name: Creating the user with "{{username}}"
-    user: name={{username}} password={{upassword.stdout}} group=ssh
+  - name: Creating the user with "{{username.user_input}}"
+    user: name={{username.user_input}} password={{upassword.stdout}} group=ssh
           append=yes shell=/bin/bash
     when: (admin|lower == 'no')
 
   - name: Creating home directory for {{username}}
-    file: path=/home/{{username}} state=directory owner={{username}} group={{username}} mode=0755
+    file: path=/home/{{username.user_input}} state=directory owner={{username.user_input}} group={{username.user_input}} mode=0755
 
   - name: Add a line in acces.conf for user {{username}}
     lineinfile: path=/etc/security/access.conf
