--- a/bmm/roles/create-user/tasks/main.yml
+++ b/bmm/roles/create-user/tasks/main.yml
@@ -25,7 +25,7 @@
     register: upassword
 
   - name: Creating the user with "{{username.user_input}}"
-    user: name={{username.user_input}} password={{upassword.stdout}} group=ssh
+    user: name={{username.user_input}} password={{upassword.stdout}} groups=ssh
           append=yes shell=/bin/bash
     when: (role|lower == 'no')
 
