--- a/bmm/unixAccountsetup.yaml
+++ b/bmm/unixAccountsetup.yaml
@@ -26,7 +26,7 @@
         register: upassword
 
       - name: Creating the user with "{{username}}"
-        user: name={{username}} password={{upassword.stdout}} group=ssh
+        user: name={{username}} password={{upassword.stdout}} group="ssh"
               append=yes shell=/bin/bash
         when: (admin|lower == 'no')
 
