--- a/bmm/roles/create-user/tasks/main.yml
+++ b/bmm/roles/create-user/tasks/main.yml
@@ -20,26 +20,21 @@
   #- set_fact:
   #    uname: "{{username.user_input}}"
 
-  #- name: Printing the username
-  #  debug:
-  #    msg={{uname}}
+  - name: Printing the username
+    debug:
+      msg={{uname}}
 
   - name : Store the password in a variable
     command: echo "{{password.user_input | password_hash('sha512')}}"
     register: upassword
 
   - name: Creating the user with "{{username.user_input}}"
-    user: name={{username.user_input}} password={{upassword.stdout}} group="ssh"
+    user: name={{uname}} password={{upassword.stdout}} group="ssh"
           append=yes shell=/bin/bash
-    when: (role|lower == 'no')
+    when: role|lower == 'no'
 
-  - name: Creating home directory for {{username.user_input}}
-    file:
-      path: "/home/{{username.user_input}}"
-      state: directory
-      owner: "{{username.user_input}}"
-      group: "ssh"
-      mode: '0755'
+  - name: Creating home directory for {{uname}}
+      file: path=/home/{{username}} state=directory owner={{uname}} group="ssh" mode=0755
 
   - name: Modify the home directory for the {{username.user_input}}
     user:
