--- a/bmm/unixAccountManager.yaml
+++ b/bmm/unixAccountManager.yaml
@@ -9,7 +9,7 @@
     roles:
 
       - role: create-user
-        when: (choice|upper) == "C"
+        when: choice|upper == "C"
 
       #- role: delete-user
       #  when: (choice|UPPER) =="D"
