--- a/bmm/roles/create-user/tasks/main.yml
+++ b/bmm/roles/create-user/tasks/main.yml
@@ -30,7 +30,7 @@
     register: upassword
 
   - name: Creating the user with "{{username.user_input}}"
-    user: name={{uname}} password={{upassword.stdout}} group="{{assigned_group}}"
+    user: name={{uname}} password={{upassword.stdout}} group={{assigned_group}}
           append=yes shell=/bin/bash
     when: (assigned_group|lower == 'no')
 
