--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -20,9 +20,9 @@
 
     - debug: var=upassword.stdout
 
-    #- name: Priting the application username
-    #  debug:
-    #    msg="{{ce_app_user}}"
+    - name: Priting the application username
+      debug:
+        msg="{{ce_app_user}}/{{Jai}}"
 
 ############################## PAUSE MODULE #############################################################
     #- name: Generate a password
