--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -1,6 +1,6 @@
 -
   name: Test connectivity with the target system
-  hosts: webserver
+  hosts: webservers
   vars_prompt:
     #- name: "password"
     #  prompt: "Enter the password"
@@ -22,7 +22,7 @@
 
     - name: Printing the application username
       debug:
-        msg="{{ce_app_user}}"
+        msg="{{WsJai}}"
 
 ############################## PAUSE MODULE #############################################################
     #- name: Generate a password
