Changes for environment variables

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
-inventory = ./inventory/hosts
-vault_password_file=/home/vault_password
+inventory = ~/environments/dev/hosts
+vault_password_file= ~/ansible-inventory-check/secrets/.vault_password
+log_path = ~/var/ansible-inventory-check/logs/ansible-inventory-check.log
