--- a/playbooks/ping-test/ping-test.yaml
+++ b/playbooks/ping-test/ping-test.yaml
@@ -1,6 +1,6 @@
 -
   name: Test connectivity with the target system
-  hosts: webserver
+  hosts: webserver.yaml
   tasks:
     - name: Ping Test
       ping:
