--- a/playbooks/build-conf.yaml
+++ b/playbooks/build-conf.yaml
@@ -1,6 +1,6 @@
 -
   name: Read a token using regular expression
-  hosts: webserver
+  hosts: webserver.yaml
 
   tasks:
     - name: Ensure a configuration directory exists in $HOME/app
@@ -21,7 +21,7 @@
 
     - name: Loop through the tasks
       include_tasks: read-replace-app-token.yaml
-      with_items: "{{ lookup('file', '/home/LDC/ansible-inventory-check/conf/webserver/input.txt').splitlines() }}"
+      with_items: "{{ lookup('file', '/home/LDC/ansible-inventory-check/conf/webserver.yaml/input.txt').splitlines() }}"
         #- {file: app-conf1, ext: xml}
         #- {file: app-conf2, ext: xml}
         #- {file: app-conf3, ext: xml}
