--- a/playbooks/ceDD.yaml
+++ b/playbooks/ceDD.yaml
@@ -1,6 +1,6 @@
 -
   name: Deploy Calculate Engine in the single box
-  hosts: webserver
+  hosts: webserver.yaml
 
   environment:
     PROJECT_DIR: /home/LDC
@@ -103,7 +103,7 @@
 
     - name: Loop through the tasks
       include_tasks: read-replace-app-token.yaml
-      with_items: "{{ lookup('file', '/home/LDC/ansible-inventory-check/conf/webserver/input.txt').splitlines() }}"
+      with_items: "{{ lookup('file', '/home/LDC/ansible-inventory-check/conf/webserver.yaml/input.txt').splitlines() }}"
       loop_control:
         loop_var: file
 
