--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -1,6 +1,6 @@
 -
   name: Create a directory app-conf in the $HOME/app/conf directory
-  hosts: webserver
+  hosts: webserver.yaml
   tasks:
     #- name: Install tools
     #  apt: name={{item}} state=present update_cache=yes
